kotlin-ide/idea/testData/compiler/loadJava/compiledKotlin/fromLoadJava/kotlinSignature/error/NotVarargReplacedWithVararg.kt
package test

import java.util.*

public open class NotVarargReplacedWithVararg {
    public open fun foo(p0 : String?) {
        throw UnsupportedOperationException()
    }
}
